<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSSampler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="service_label">GPSSampler Service Running</string>
    <string name="summary_label">Summary </string>
    <string name="na"> -- </string>
    <string name="bike_mode">Bike </string>
    <string name="default_mode">Non Bike (Default) </string>
    <string name="select_mode">Select Sampling Mode </string>
    <string name="total_readings">Total No. Readings: </string>
    <string name="last_reading_timestamp">Last Reading:  </string>
    <string name="sampling_duration">Sampling Duration: </string>
    <string name="local_service_stopped">GPSSampler Service stopped.</string>

</resources>